--- a/assets/style.css
+++ b/assets/style.css
@@ -68,11 +68,16 @@
 
 html {
 	color: black;
-	font: 130%/1.5 var(--font-sans);
+	font: 110%/1.5 var(--font-sans);
 	letter-spacing: -0.015em;
 }
 
 @media (width > 700px) {
+
+html {
+		font-size: 130%;
+}
+
 		html.supports-registerproperty {
 			xanimation: to1 600s linear infinite;
 		}
@@ -100,8 +105,15 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	}
 
 h1 {
-	font-size: 400%;
+	font-size: 220%;
 }
+
+@media (width > 700px) {
+
+h1 {
+		font-size: 400%;
+}
+	}
 
 h2 {
 	font-size: 300%;
@@ -268,8 +280,9 @@ body > main {
 
 body > footer {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	gap: 1em;
 	padding: var(--min-padding) var(--content-margin);
+	margin-top: 2em;
 	background: repeating-conic-gradient(from calc(var(--number, 0) * 1turn) at calc(100% + 1em) calc(100% + 1em), rgb(0 0 0 / .1) 0 4deg, transparent 0 8deg) fixed;
 	background-color: hsl(var(--gray) 23%);
 	border: 0 solid hsl(var(--gray) 95% / .2);
@@ -335,12 +348,10 @@ body > footer nav a {
 		}
 
 body > footer small {
-		grid-column-end: span 2;
 		display: flex;
-		gap: 1em;
+		gap: .6em;
 		padding: 1rem 0;
 		border-top: 1px solid hsl(var(--gray) 95% / .2);
-		margin-top: 1rem;
 	}
 
 body > footer small a,
@@ -359,6 +370,24 @@ body > footer small .credits {
 body > footer small .to-top {
 			margin-left: auto;
 		}
+
+@media (width < 700px) {
+
+body > footer small {
+			flex-flow: column;
+	}
+		}
+
+@media (width > 600px) {
+
+body > footer {
+		grid-template-columns: 1fr 1fr;
+}
+
+		body > footer small {
+			grid-column-end: span 2;
+		}
+	}
 
 .post-meta {
 	display: flex;
