--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -60,7 +60,7 @@
 
 
 	<small>
-		<div class="copyright">&copy;2009&thinsp;&ndash;&thinsp;{{ currentYear }} Lea Verou</div>
+		<div class="copyright">&copy;2009&ndash;{{ currentYear }} Lea Verou</div>
 		<div class="credits">Powered by <a href="https://11ty.dev/">Eleventy</a>, hosted by <a href="https://netlify.com">Netlify</span></div>
 		<a href="#" class="to-top">
 			<span class="long-text">To the top</span>
