More social icon styling

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -18,7 +18,7 @@
 			<img property="image" src="/mark.svg" alt="">
 			<span class="site-title" title="Life at the bleeding edge (of the Web)">Lea Verou</span>
 		</a>
-		<div class="social">{% include "_social.njk" %}</div>
+		<div class="social gt-md">{% include "_social.njk" %}</div>
 		<nav class="gt-md">{% include "_nav.njk" %}</nav>
 		<a href="#nav" class="🍔 lt-md"><i class="bi bi-list"></i></a>
 	</div>
@@ -56,6 +56,7 @@
 		{% include "_social.njk" %}
 	</section>
 	<nav id="nav">
+		<h4>About me</h4>
 		{% include "_nav.njk" %}
 	</nav>
 
