--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -60,6 +60,17 @@
 	}
 }
 
+:nth-child(1) { --index: 1; }
+:nth-child(2) { --index: 2; }
+:nth-child(3) { --index: 3; }
+:nth-child(4) { --index: 4; }
+:nth-child(5) { --index: 5; }
+:nth-child(6) { --index: 6; }
+:nth-child(7) { --index: 7; }
+:nth-child(8) { --index: 8; }
+:nth-child(9) { --index: 9; }
+:nth-child(n + 10) { --index: 10; }
+
 html {
 	color: black;
 	font: 110%/1.5 var(--font-sans);
@@ -177,10 +188,48 @@ pre, code {
 	font-family: var(--font-monospace);
 }
 
+@property --number {
+	syntax: "<number>";
+	inherits: false;
+	initial-value: 0;
+}
+
 @keyframes to1 {
 	from { --number: 0; }
-
 	to { --number: 1; }
+}
+
+.social {
+	display: flex;
+	flex-flow: column;
+	gap: .5rem;
+
+	& a {
+		display: flex;
+		gap: .5em;
+		text-decoration: none;
+
+		&::after {
+			font-weight: bold;
+		}
+
+		& i {
+			display: inline-flex;
+			width: 1em;
+			line-height: 1;
+			padding: .3em;
+			box-sizing: content-box;
+			border-radius: 50%;
+			background: var(--color-accent);
+			color: white;
+			transition: .2s transform;
+
+			&:is(:hover > *) {
+				background: var(--color-accent2);
+				transform: scale(1.2);
+			}
+		}
+	}
 }
 
 body > header {
@@ -236,16 +285,25 @@ body > header {
 		}
 
 		.🍔 {
-			margin-left: 1em;
+			margin-left: auto;
 		}
 
 		& .social {
-			display: flex;
-			gap: .5em;
-			margin-left: auto;
+			position: absolute;
+			left: 1.6rem;
+			top: 4.25rem;
+			font-size: 80%;
 
-			@media (width > 960px) {
-				margin-left: 1em;
+			& a {
+				--link-index: var(--index);
+
+				&:hover::after {
+					content: attr(aria-label);
+				}
+
+				& i {
+					scale: calc(1.1 - var(--link-index) * .08);
+				}
 			}
 		}
 	}
@@ -277,8 +335,10 @@ body > footer {
 	& h4 {
 		padding: .3em 1em;
 		width: max-content;
+		column-span: all;
 		align-self: start;
 		margin: 0;
+		margin-bottom: .4rem;
 		background: var(--color-accent);
 		color: hsl(var(--gray) 20%);
 		font-size: .8em;
@@ -286,39 +346,22 @@ body > footer {
 		--offset: .5em;
 		clip-path: polygon(var(--offset) 0, 100% 0, calc(100% - var(--offset)) 100%, 0 100%);
 		margin-left: calc(-1 * var(--offset));
+
+	}
+
+	& > :has(> h4) {
+		margin-top: -1.5rem;
 	}
 
 	& .social {
-		display: flex;
-		flex-flow: column;
-		gap: .5em;
-		margin-top: -1.5em;
+		display: block;
+		column-count: 2;
 
 		& a {
-			display: flex;
-			gap: .5em;
-			text-decoration: none;
+			margin: .5em 0;
 
 			&::after {
-				content: attr(title);
-				font-weight: bold;
-			}
-
-			& i {
-				display: inline-flex;
-				width: 1em;
-				line-height: 1;
-				padding: .3em;
-				box-sizing: content-box;
-				border-radius: 50%;
-				background: var(--color-accent);
-				color: white;
-				transition: .2s transform;
-
-				&:is(:hover > *) {
-					background: var(--color-accent2);
-					transform: scale(1.2);
-				}
+				content: attr(aria-label);
 			}
 		}
 	}
