--- a/_includes/_social.njk
+++ b/_includes/_social.njk
@@ -2,5 +2,5 @@
 	<a class="{{ service.name | lower }}"
 	href="{{ service.url }}"
 	target="_blank" rel="me"
-	title="{{ service.name }}"><i class="bi bi-{{ service.icon }}"></i></a>
+	aria-label="{{ service.name }}"><i class="bi bi-{{ service.icon }}"></i></a>
 {% endfor %}
